# libra-legacy-v6

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE_0L  Makefile  Makefile-mac  README.md  SECURITY.md  account.json  ci-test.yaml  dev.mk  genesis.blob  genesis_waypoint  migrate.sh  miner.toml  release.yaml  set_layout.toml  setup.sh  shell.nix  x.toml
api/types/: Cargo.toml
api/types/src/: convert.rs  move_types.rs
client/json-rpc/: Cargo.toml
client/json-rpc/src/: blocking.rs  broadcast_client.rs  client.rs  lib.rs  response.rs
common/bitvec/: Cargo.toml
common/bitvec/src/: lib.rs
common/bounded-executor/: Cargo.toml
common/bounded-executor/src/: lib.rs
common/datatest-stable/: Cargo.toml
common/futures-semaphore/: Cargo.toml
common/futures-semaphore/src/: lib.rs
common/infallible/: Cargo.toml
common/lcs/: Cargo.toml
common/lcs/benches/: lcs_bench.rs
common/lcs/src/: de.rs  error.rs  lib.rs  ser.rs
common/lcs/tests/: serde.rs
common/logger/: Cargo.toml
common/logger/derive/: Cargo.toml
common/logger/src/: diem_logger.rs  lib.rs  logger.rs
common/metrics/: Cargo.toml
common/metrics/src/: lib.rs  metric_server.rs  op_counters.rs
common/proptest-helpers/: Cargo.toml
common/stream-ratelimiter/: Cargo.toml
common/stream-ratelimiter/src/: lib.rs
common/temppath/: Cargo.toml
common/temppath/src/: lib.rs
common/workspace-hack/: Cargo.toml
config/generate-key/: Cargo.toml
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/management/: 0L-README.md  Cargo.toml  debug_data.md
config/management/bobs_stuff/: copy.node.config.toml  github_token  key_store.json
config/management/genesis/: Cargo.toml
config/management/network-address-encryption/: Cargo.toml
config/management/operational/: Cargo.toml
config/management/src/: Untitled-1  config.rs  genesis.rs  initialize.rs  key.rs  layout.rs  lib.rs  mining.rs  node_keys.rs  secure_backend.rs  seeds.rs  smoke_test.rs  storage_helper.rs  storage_helper_github.rs  validator_config.rs  waypoint.rs
config/management/test_fixtures/: block_0.json  genesis.blob  github_token  set_layout.toml
config/seed-peer-generator/: Cargo.toml
crates/diem-assets-proof/: Cargo.toml
crypto/crypto-derive/: Cargo.toml
explorer/: Cargo.toml
explorer/src/: main.rs
explorer/src/explorer/: app.rs  ui.rs
explorer/src/util/: event.rs  mod.rs
keygen/: Cargo.toml
keygen/src/: keygen.rs
keys/: Cargo.toml
keys/src/: lib.rs  scheme.rs  wallet.rs
miner/: .gitignore  Cargo.toml  README.md  account.json  github_token.txt  miner.toml  setup.sh  val_init.json
miner/benches/: bench.rs
miner/blocks/: block_1.json  block_2.json
miner/miner_bak/: Cargo.toml
miner/miner_bak/benches/: bench.rs
miner/miner_bak/src/: commands.rs
miner/src/: account.rs  application.rs  backlog.rs  block.rs  commands.rs  config.rs  delay.rs  entrypoint.rs  keygen.rs  lib.rs  node_keys.rs  resubmit_tx.rs  submit_noop_helper.rs  submit_tx.rs  submit_tx_alt.rs  swarm_test.rs  test_resubmit_tx_swarm.rs  test_tx_swarm.rs
miner/src/commands/: ceremony_cmd.rs  ceremony_util_cmd.rs  create_account.rs  create_validator.rs  export.rs  files_cmd.rs  genesis.depr  genesis.rs  genesis_cmd.rs  init.rs  init_cmd.rs  keygen.rs  keygen_cmd.rs  manifest_cmd.rs  manifest_user_cmd.rs  manifest_val_cmd.rs  onboard.rs  onboard_cmd.rs  resubmit.depr  resubmit.rs  start.rs  start_cmd.rs  start_test_swarm.rs  submit.rs  submit_test.depr  swarm.rs  swarm_test.rs  swarm_test_cmd.rs  wizard_cmd.rs  wizard_fn_cmd.rs  wizard_user_cmd.rs  wizard_val_cmd.rs  (+2 more)
miner/test_blocks_temp_2/: block_0.json
miner/test_fixtures_miner_0/: block_0.json  miner.toml
miner/test_fixtures_miner_1/: block_0.json  miner.toml
miner/test_fixtures_miner_2/: block_0.json  miner.toml
miner/test_fixtures_miner_3/: block_0.json  miner.toml
miner/test_fixtures_miner_4/: block_0.json  miner.toml
miner/test_fixtures_miner_5/: block_0.json  miner.toml
miner/tests/: acceptance.rs  block.rs  config.rs  delay.rs  get_waypoint.rs  integration-simple.rs  integration.depr  integration.rs  sample.json  submit_tx.rs
ol-cli/: Cargo.toml  README.md  foo.yaml
ol-cli/.0L/: ol_cli.toml
ol-cli/src/: account.rs  account_resource.rs  application.rs  cache.rs  chain_info.rs  check.bak  check.rs  check_runner.rs  client.rs  commands.rs  config.bak  config.rs  daemon.rs  entrypoint.rs  lib.rs  machine.rs  management.rs  metadata.rs  monitor.rs  node_health.rs  node_management.rs  onboard.bak  onboard.rs  query.rs  restore.rs  server.bak  server.rs  sm.rs  transitions.rs  trigger.rs
ol-cli/tests/: acceptance.rs
ol-cli/web/: index.html
ol-cli/web-monitor/: package-lock.json
ol-miner/: Cargo.toml  ol_miner.toml
ol-miner/docs/: adr001.md
ol-miner/src/: application.rs  block.rs  commands.rs  config.rs  error.rs  lib.rs  submit_tx.rs
ol-miner/tests/: acceptance.rs  block.rs  config.rs  delay.rs  submit_tx.rs
sdk/: Cargo.toml
sdk/client/: Cargo.toml
sdk/compatibility/: Cargo.toml
sdk/offchain/: Cargo.toml
sdk/src/: transaction_builder.rs  types.rs
sdk/transaction-builder/: Cargo.toml
txs/: .gitignore  Cargo.toml  README.md  signed_tx.json
txs/src/: application.rs  backlog.rs  commands.rs  config.rs  config.rs.bak  entrypoint.bak  entrypoint.rs  epoch.rs  lib.rs  main.rs  relay.rs  save_tx.rs  sign_tx.rs  submit_tx.rs  test_tx_swarm.rs  tx_params.rs
types/: Cargo.toml
types/src/: access_path.rs  account_address.rs  account_state.rs  account_state_blob.rs  autopay.rs  block_info.rs  block_metadata.rs  chain_id.rs  contract_event.rs  dialogue.rs  epoch_change.rs  ledger_info.rs  lib.rs  libra_timestamp.rs  ol_legacy_account_state.rs  ol_miner_state.rs  ol_oracle_upgrade_state.rs  ol_teams_state.rs  ol_upgrade_payload.rs  ol_validators_stats.rs  ol_vdf_difficulty.rs  proptest_types.rs  rpc_playlist.rs  trusted_state.rs  upgrade_payload.rs  validator_config.rs  validator_info.rs  validator_signer.rs  validator_verifier.rs  validators_stats.rs  wallet.rs  waypoint.rs  write_set.rs
(+4836 files in other folders)
