[workspace]
resolver = "2"

members = [
    "ol/cli",    
    "ol/keys",
    "ol/tower",
    "ol/onboard",
    "ol/smoke-tests",
    "ol/txs",
    "ol/types",
    "ol/util",
    "ol/verifiable_delay/classgroup",
    "ol/verifiable_delay/vdf",
    "ol/verifiable_delay/vdf-cli", 
    "ol/genesis-tools",    
]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[profile.bench]
debug = true

# Build guppy in opt mode so that x commands are faster.
[profile.dev.package.guppy]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Requires rustc 1.51
lto = false
incremental = true