[package]
name = "explorer"
version = "0.1.0"
authors = ["liangping <18786721@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14.0"
termion = "1.5"
libra-types = { path = "../types/", version= "0.1.0"}
reqwest = { version = "0.10.6", features = ["blocking", "json"], default_features = false }
bitflags = "1.0"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
chrono = "0.4.19"

rand = "0.7"
argh = "0.1.4"

cli = { path = "../testsuite/cli/", version = "0.1.0" }
libra-json-rpc-client = { path = "../client/json-rpc", version = "0.1.0" }

