[package]
name = "miner"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
wait-timeout = "0.2.0"
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
classgroup = { path = "../verifiable_delay/classgroup", version = "^0.1.0" }
vdf = { path = "../verifiable_delay/vdf", version = "^0.1.0" }
hex = "0.4"
byteorder = "1"
glob = "0.3"
serde_json = "1"
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-wallet = { path = "../testsuite/cli/libra-wallet", version = "0.1.0" }
cli = { path = "../testsuite/cli/", version = "0.1.0" }
libra-types = { path = "../types/", version = "0.1.0" }
libra-config = { path = "../config/", version = "0.1.0" }
libra-json-rpc-types = { path = "../json-rpc/types", version = "0.1.0"} 
stdlib = { path = "../language/stdlib", version = "0.1.0" }
regex = "1"
rpassword = "5.0"
# language-e2e-tests = { path = "../language/e2e-tests", version = "0.1.0" }

rustyline = "6.2.0"
anyhow = "1.0.31"
toml = "0.5.6"
reqwest = { version = "0.10.6", features = ["blocking", "json"], default_features = false }

[dependencies.abscissa_core]
version = "0.5.2"

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
