[package]
name = "ol-cli"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
once_cell = "1.7.2"
sysinfo = "0.16.4"
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
reqwest = { version = "0.10.6", features = ["blocking", "json"], default_features = false }
cli = { path = "../testsuite/cli/", version = "0.1.0" }
libra-types = { path = "../types/", version= "0.1.0"}
num-format = "0.4.0"
resource-viewer = { path = "../language/tools/resource-viewer", version = "0.1.0" }
anyhow = "1.0"
chrono = "0.4"
libra-global-constants = { path = "../config/global-constants", version = "0.1.0"}
dirs = "2.0.2"
toml = "0.5.6"
rustyline = "6.2.0"
libra-json-rpc-client = { path = "../client/json-rpc", version = "0.1.0" }
crossterm = "0.19.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde_json = "1.0"
clokwerk = "0.3.4"
handlebars = "3.5.3"
rocksdb = "0.15.0"
futures = "0.3.6"
nix = "*"
libra-secure-storage = { path = "../secure/storage", version = "0.1.0" }
glob = "0.3.0"
sm = "0.9.0"
libra-config = { path = "../config", version = "0.1.0"}

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"

