[package]
name = "diem-sdk"
version = "0.0.3"
authors = ["Diem Association <opensource@diem.com>"]
description = "The Official Diem SDK"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[features]
default = ["client"]
client = ["diem-client"]

[dependencies]
bcs = "0.1"
rand_core = "0.6.2"
serde = { version = "1.0.124", features = ["derive"] }

diem-crypto = { path = "../crates/diem-crypto", version = "0.0.3" }
diem-types = { path = "../types", version = "0.0.3"}
#/////// 0L /////////
move-core-types = { git = "https://github.com/OLSF/move-0L", rev = "94e1039c9fdf1472c2c7775de43135d28dafc955" }
diem-transaction-builder = { path = "./transaction-builder", version = "0.0.3" }
diem-workspace-hack = { version = "0.1", path = "../crates/diem-workspace-hack" }

# Optional Dependencies
diem-client = { path = "../crates/diem-client", version = "0.0.3", optional = true }
