[package]
name = "txs"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
wait-timeout = "0.2.0"
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
classgroup = { path = "../verifiable_delay/classgroup", version = "^0.1.0" }
vdf = { path = "../verifiable_delay/vdf", version = "^0.1.0" }
hex = "0.4"
byteorder = "1"
glob = "0.3"
serde_json = "1"
keygen = { path = "../keygen/", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-wallet = { path = "../testsuite/cli/libra-wallet", version = "0.1.0" }
cli = { path = "../testsuite/cli/", version = "0.1.0" }
libra-types = { path = "../types/", version = "0.1.0" }
libra-config = { path = "../config/", version = "0.1.0" }
libra-json-rpc-types = { path = "../json-rpc/types", version = "0.1.0"} 
stdlib = { path = "../language/stdlib", version = "0.1.0" }
compiled-stdlib = { path = "../language/stdlib/compiled", version = "0.1.0" }
libradb = { path = "../storage/libradb", version="0.1.0"}
libra-logger = { path = "../common/logger", version = "0.1.0" }
storage-interface= {path = "../storage/storage-interface", version="0.1.0"}
vm-genesis={path="../language/tools/vm-genesis", version="0.1.0"}
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
move-core-types={path="../language/move-core/types", version="0.1.0"}
regex = "1"
rpassword = "5.0"
ajson = "0.2.3"
rustyline = "6.2.0"
anyhow = "1.0.31"
toml = "0.5.6"
reqwest = { version = "0.10.6", features = ["blocking", "json"], default_features = false }
libra-global-constants = { path = "../config/global-constants", version = "0.1.0"}
dirs = "2.0.2"
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0"}
libra-network-address = { path = "../network/network-address", version = "0.1.0" }
libra-genesis-tool = { path = "../config/management/genesis", version = "0.1.0" }
libra-management = { path = "../config/management", version = "0.1.0" }

[dependencies.abscissa_core]
version = "0.5.2"

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"
criterion = "0.3"
