[package]
name = "diem-api-types"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem API Types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
hex = "0.4.3"
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
warp = { version = "0.3.0", features = ["default"] }

diem-crypto = { path = "../../crates/diem-crypto" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }
diem-types = { path = "../../types" }
diem-workspace-hack = { version = "0.1", path = "../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/OLSF/move-0L", rev = "86a9cfd1f0ace08c8c4220f7927e112c1f990945" }
move-core-types = { git = "https://github.com/OLSF/move-0L", rev = "86a9cfd1f0ace08c8c4220f7927e112c1f990945" }
move-resource-viewer = { git = "https://github.com/OLSF/move-0L", rev = "86a9cfd1f0ace08c8c4220f7927e112c1f990945" }

[dev-dependencies]
move-binary-format = { git = "https://github.com/OLSF/move-0L", rev = "86a9cfd1f0ace08c8c4220f7927e112c1f990945" }
