[package]
name = "diem-bitvec"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem safe bitvec implementation"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
proptest = { version = "0.10.1", default-features = true, optional = true }
proptest-derive = { version = "0.2.0", optional = true }
serde = { version = "1.0.116", features = ["derive"] }
serde_bytes = "0.11.5"

[dev-dependencies]
lcs = { path = "../lcs", version = "0.1.0", package = "diem-canonical-serialization" }
diem-proptest-helpers = { path = "../proptest-helpers", version = "0.1.0"}
proptest = { version = "0.10.1", default-features = true }
proptest-derive = { version = "0.2.0" }

[features]
fuzzing = ["proptest-derive", "proptest"]
