[package]
name = "bounded-executor"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem bounded executor"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.3.6"
futures-semaphore = { path = "../futures-semaphore" }
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
tokio = { version = "0.2.22", features = ["full"] }
