[package]
name = "datatest-stable"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem datatest stable"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
walkdir = "2.3.1"
structopt = "0.3.18"
termcolor = "1.1.0"
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }

[[test]]
name = "example"
harness = false
