[package]
name = "futures-semaphore"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem futures semaphore"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
tokio = { version = "0.2.22", features = ["sync"] }

[dev-dependencies]
futures = "0.3.6"
tokio = { version = "0.2.22", features = ["full"] }
