[package]
name = "diem-infallible"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem diem-infallible"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
