[package]
name = "diem-logger"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem diem-logger"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the diem-logger crate.
[dependencies]
chrono = "0.4.19"
erased-serde = "0.3.12"
hex = "0.4.2"
hostname = "0.3.1"
diem-log-derive = { path = "derive", version = "0.1.0" }
diem-infallible = { path = "../infallible", version = "0.1.0" }
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
once_cell = "1.4.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
prometheus = { version = "0.10.0", default-features = false }
