[package]
name = "diem-metrics"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem diem-metrics"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
futures = "0.3.6"
hyper = "0.13.8"
once_cell = "1.4.1"
prometheus = { version = "0.10.0", default-features = false }
serde_json = "1.0.58"
tokio = "0.2.22"

diem-logger = { path = "../logger", version = "0.1.0" }
diem-metrics-core = { path = "../metrics-core", version = "0.1.0" }
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }

[dev-dependencies]
rusty-fork = "0.3.0"
assert_approx_eq = "1.1.0"
