[package]
name = "diem-proptest-helpers"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem proptest helpers"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
proptest = "0.10.1"
proptest-derive = "0.2.0"
