[package]
name = "stream-ratelimiter"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem futures semaphore"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.3.6"
tokio = { version = "0.2.22", features = ["time", "stream"] }
pin-project = "0.4.26"
futures-semaphore = { path = "../futures-semaphore" }
diem-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
