[package]
name = "diem-temppath"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem diem-temppath"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hex = "0.4.2"
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
rand = "0.7.3"
