[package]
name = "diem-workspace-hack"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem workspace hack"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = { version = "0.5.6", features = ["serde", "std"] }
cc = { version = "1.0.60", features = ["jobserver", "parallel"] }
log = { version = "0.4.11", features = ["serde", "std"] }
memchr = { version = "2.3.3", features = ["std", "use_std"] }
num-traits = { version = "0.2.12", features = ["std"] }
petgraph = { version = "0.5.1", features = ["graphmap", "matrix_graph", "stable_graph"] }
serde = { version = "1.0.116", features = ["derive", "rc"] }
sha-1 = { version = "0.9.1", features = ["std"] }
subtle = { version = "2.3.0", features = ["i128", "std"] }
syn = { version = "1.0.42", features = ["clone-impls", "derive", "extra-traits", "fold", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }
