[package]
name = "diem-global-constants"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem's global constant crate: the source of truth for constant definitions that span multiple crates"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"
