[package]
name = "seed-peer-generator"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem seed peer generator"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
hex = "0.4.2"
rand = "0.7.3"
serde_yaml = "0.8.13"
structopt = "0.3.18"
thiserror = "1.0.21"

executor = { path = "../../execution/executor", version = "0.1.0" }
generate-key = { path = "../../config/generate-key", version = "0.1.0" }
lcs = { path = "../../common/lcs", version = "0.1.0", package = "diem-canonical-serialization" }
diem-config = { path = "..", version = "0.1.0" }
diem-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
diem-secure-json-rpc = { path = "../../secure/json-rpc", version = "0.1.0" }
diem-logger = { path = "../../common/logger", version = "0.1.0" }
diem-key-manager = { path = "../../secure/key-manager", version = "0.1.0" }
diem-network-address = { path = "../../network/network-address", version = "0.1.0" }
diem-temppath = { path = "../../common/temppath", version = "0.1.0" }
diem-types = { path = "../../types", version = "0.1.0" }
diem-vm = { path = "../../language/diem-vm", version = "0.1.0" }
diem-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
diemdb = { path = "../../storage/diemdb", version = "0.1.0" }
storage-interface = { path = "../../storage/storage-interface", version = "0.1.0" }
transaction-builder = { path = "../../language/transaction-builder", version = "0.1.0" }
vm-genesis = { path = "../../language/tools/vm-genesis", version = "0.1.0" }

[features]
default = []
