[package]
name = "diem-assets-proof"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Proof-of-Assets CLI"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
structopt = "0.3.21"

bcs = "0.1.2"
diem-client = { path = "../diem-client", features = ["blocking"], default-features = false }
diem-crypto = { path = "../diem-crypto" }
diem-types = { path = "../../types" }
move-core-types = { git = "https://github.com/OLSF/move-0L", rev = "3a174c09c397ee78df1ef7bd2f4ea4205711f69b" }
diem-workspace-hack = { version = "0.1", path = "../diem-workspace-hack" }
