[package]
name = "diem-crypto-derive"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem custom derives for `diem-crypto`"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
diem-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
syn = { version = "1.0.42", features = ["derive"] }
quote = "1.0.7"
proc-macro2 = "1.0.24"

[dev-dependencies]
anyhow = "1.0.33"
